--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,3 +1,30 @@
-<p>新規寄付ページ</p>
+<h1>新規寄付ページ</h1>
 
+<%= form_with url: new_donation_path, local: true do |f| %>
+  <h2>住所</h2>
+  <div class="field">
+    <%= f.label :postal_code, '郵便番号（ハイフンを含む）' %>
+    <%= f.text_field :postal_code %>
+  </div>
+  <div class="field">
+    <%= f.label :city, '市町村（任意）' %>
+    <%= f.text_field :city %>
+  </div>
+  <div class="field">
+    <%= f.label :building_name, '建物名（任意）' %>
+    <%= f.text_field :building_name %>
+  </div>
+
+  <h2>寄付</h2>
+  <div class="field">
+    <%= f.label :price, '金額（¥1 ~ 1,000,000）' %>
+    <%= '¥' %>
+    <%= f.text_field :price %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit '寄付する' %>
+  </div>
+
+<% end %>
 <%= link_to 'トップページ', root_path%>
